# mailprobe-py

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPMENT.md  MULTI_CATEGORY_GUIDE.md  OO_API_GUIDE.md  README.md  TEST_SUMMARY.md  USAGE.md  pyproject.toml  run_tests.py  test_basic.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
examples/: integration_example.py  multi_category_example.py
src/mailprobe/: __init__.py  api.py  cli.py  config.py  database.py  filter.py  message.py  multi_category.py  tokenizer.py  utils.py
test_data/: good_email.txt  spam_email.txt
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_database.py  test_filter.py  test_message.py  test_multi_category.py  test_tokenizer.py
